namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-nginx
  labels:
  
    owner: acm.wilwang.sandbox
