deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1
  namespace: demo-nginx
  labels:
    app: nginx-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
      - name: nginx-1
        image: nginx:latest
        ports:
        - containerPort: 80
