nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1
  namespace: demo-nginx
  labels:
    app: nginx-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
      - name: nginx-1
        image: nginx:latest
        ports:
        - containerPort: 443
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-1-service
  namespace: demo-nginx  
spec:
  selector:
    app: nginx-1
  type: LoadBalancer  
  ports:
  - port: 80
