service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-1-service
  namespace: demo-nginx  
spec:
  selector:
    app: nginx-1
  type: LoadBalancer  
  ports:
  - port: 80
