cluster-policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sReplicaLimits
metadata:
  name: replicas-min-max-range
spec:
  # change action to `deny` for enforcement, `dryrun` for monitoring w/o blocking, `warn` for monitoring with immediate message about violations
  enforcementAction: dryrun
  match:
    excludedNamespaces: ["kube-*", "config-management-*", "gatekeeper-system", "resource-group-system", "poco-trial", "default"]
    kinds:
    - apiGroups:
      - apps
      kinds:
      - Deployment
  parameters:
    ranges:
    - max_replicas: 5
      min_replicas: 3
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: must-have-owner-label
spec:
  # change action to `deny` for enforcement, `dryrun` for monitoring w/o blocking, `warn` for monitoring with immediate message about violations
  enforcementAction: deny
  match:
    excludedNamespaces: ["kube-*", "config-management-*", "gatekeeper-system", "resource-group-system", "poco-trial", "default"]
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Namespace
  parameters:
    labels:
     - allowedRegex: ^[a-zA-Z]+.wilwang.sandbox$
       key: owner
    message: All namespaces must have an `owner` label that points to the project name
